# jsEditor

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Window.cpp  Window.h  bootstrap.cpp  resources.qrc  run.cpp
src/application/: ActiveTab.h  Application.cpp  Application.h
src/console_widget/: ConsoleWidget.cpp  ConsoleWidget.h
src/layouts/: Button.h  MyLayout.h
src/layouts/arrow_container/: Arrow.cpp  Arrow.h  ArrowCont.cpp  ArrowCont.h
src/layouts/file_widget/: FileWidget.cpp  FileWidget.h
src/layouts/srcoll_utils/: CustomScrollArea.cpp  CustomScrollArea.h  ScrollContainer.cpp  ScrollContainer.h
src/structure/bottom_layout/: BottomLayout.h
src/structure/mid_layout/: MidLayout.cpp  MidLayout.h
src/structure/top_layout/: TopLayout.cpp  TopLayout.h
src/v8_stuff/: V8_Exec.cpp  V8_Exec.h
src/v8_stuff/activeTabUtils/: activeTab.cpp  activeTab.h
tests/: CMakeLists.txt  test_custom_button.cpp  test_layout.cpp  test_utils.cpp
tests/application/: test_app_class.cpp
tests/file_widget/: test_file_widget.cpp
tests/scroll_utils/: test_scroll_cont.cpp
tests/structures/: test_bottom_sctructure.cpp  test_top_structure.cpp
