enable_testing()
# add_executable(test1 test_utils.cpp)
# target_link_libraries(test1 PRIVATE sut Qt6::Widgets Qt6::Test)

# add_executable(test2 test_layout.cpp)
# target_link_libraries(test2 PRIVATE sut Qt6::Widgets Qt6::Test)

# add_executable(test_button test_custom_button.cpp)
# target_link_libraries(test_button PRIVATE sut Qt6::Widgets Qt6::Test)

# add_executable(test_top_layout structures/test_top_structure.cpp)
# target_link_libraries(test_top_layout PRIVATE sut Qt6::Widgets Qt6::Test)

# add_executable(test_scroll_cont scroll_utils/test_scroll_cont.cpp)
# target_link_libraries(test_scroll_cont PRIVATE sut Qt6::Widgets Qt6::Test)

# add_executable(test_file_widget file_widget/test_file_widget.cpp)
# target_link_libraries(test_file_widget PRIVATE sut Qt6::Widgets Qt6::Test)

# add_executable(test_app_class application/test_app_class.cpp)
# target_link_libraries(test_app_class PRIVATE sut Qt6::Widgets Qt6::Test)

# add_executable(test_bottom_structure structures/test_bottom_sctructure.cpp)
# target_link_libraries(test_bottom_structure PRIVATE sut Qt6::Widgets Qt6::Test)

# add_test(NAME test1 COMMAND test1)
# add_test(NAME test2 COMMAND test2)
# add_test(NAME test_button COMMAND test_button)
# add_test(NAME test_top_layout COMMAND test_top_layout)
# add_test(NAME test_arrow_cont COMMAND test_arrow_cont)
# add_test(NAME test_scroll_cont COMMAND test_scroll_cont)
# add_test(NAME test_file_widget COMMAND test_file_widget)
# add_test(NAME test_app_class COMMAND test_app_class)
# add_test(NAME test_bottom_structure COMMAND test_bottom_structure)